initial code: slider and black box display working but visibility function is not working 100% correctly

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 </head>
 <body>
   <hello-world userName="Gary"></hello-world>
+  <lan-slider max=10></lan-slider>
 
   <script type = "module" src="src/main.js"></script>
+  <script type = "module" src="src/Slider/lan-slider.js"></script>
 </body>
 </html>
