--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <title>Hello World Web Component</title>
+  <link href="StyleSheet.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <hello-world userName="Gary"></hello-world>
-
   <script type = "module" src="src/main.js"></script>
+  <button class="button default">Default</button>
+  <button class="button primary">Primary</button>
+  <button class="button success">Success</button>
+  <button class="button info">Info</button>
+  <button class="button warning">Warning</button>
+  <button class="button danger">Danger</button>
+
+
 </body>
 </html>
