--- a/packages/button/src/index.html
+++ b/packages/button/src/index.html
@@ -10,12 +10,23 @@
 
 <body>
     <h1>LANButton example</h1>
-    <lan-button>Default</lan-button>
-    <lan-button type="primary">Primary</lan-button>
-    <lan-button type="success">Success</lan-button>
-    <lan-button type="info">Info</lan-button>
-    <lan-button type="warning">Warning</lan-button>
-    <lan-button type="danger">Primary</lan-button>
+    <div>
+        <lan-button>Default</lan-button>
+        <lan-button type="primary">Primary</lan-button>
+        <lan-button type="success">Success</lan-button>
+        <lan-button type="info">Info</lan-button>
+        <lan-button type="warning">Warning</lan-button>
+        <lan-button type="danger">Primary</lan-button>
+    </div>
+    <div>
+        <lan-button>Default</lan-button>
+        <lan-button type="primary" plain>Primary</lan-button>
+        <lan-button type="success" plain>Success</lan-button>
+        <lan-button type="info" plain>Info</lan-button>
+        <lan-button type="warning" plain>Warning</lan-button>
+        <lan-button type="danger" plain>Primary</lan-button>
+    </div>
+
 </body>
 
 </html>
