--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
   <button class="button success">Success</button>
   <button class="button info">Info</button>
   <button class="button warning">Warning</button>
-  <button class="button danger">Danger</button>
-
+  <!--
+    <button class="button danger">Danger</button>
+  -->
+  <input type="button" class="button danger" value="Danger" onclick="alert('YO!!!')"> 
 
 </body>
 </html>
