--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <hello-world userName="Gary"></hello-world>
-  <lan-slider max=10></lan-slider>
+  <lan-slider val=8></lan-slider>
 
   <script type = "module" src="src/main.js"></script>
   <script type = "module" src="src/Slider/lan-slider.js"></script>
