cleanup and integrated with albertSliderMod branch

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <lan-slider min=0 max=100 val=8></lan-slider>
 
   <script type = "module" src="src/main.js"></script>
-  <script type = "module" src="src/Slider/lan-slider.js"></script>
+  <script type = "module" src="packages/Slider/lan-slider.js"></script>
 </body>
 </html>
