--- a/test/lan-button/lan-button-test.html
+++ b/test/lan-button/lan-button-test.html
@@ -2,9 +2,9 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-lite.js"></script>
-  <script src="../node_modules/web-component-tester/browser.js"></script>
-  <script src="../packages/button/src/main.js" defer></script>
+  <script src="../../node_modules/@webcomponents/webcomponentsjs/webcomponents-lite.js"></script>
+  <script src="../../node_modules/web-component-tester/browser.js"></script>
+  <script src="../../packages/lan-button/src/main.js" defer></script>
 </head>
 <body>
   <test-fixture id="simple">
