Added documentation for button and bootstrap integration

--- a/packages/lan-button/src/index.html
+++ b/packages/lan-button/src/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="UTF-8">
     <title>lan-slider example</title>
-    <script src="main.js" defer></script>
+    <script src="main.js" type="module" defer></script>
 </head>
 
 <body>
@@ -47,6 +47,9 @@
         <lan-button type="info" disabled>Info</lan-button>
         <lan-button type="warning" disabled>Warning</lan-button>
         <lan-button type="danger" disabled>Danger</lan-button>
+    </div>
+    <div>
+        <lan-button class="btn btn-dark btn-block">Bootstrap Button</lan-button>
     </div>
 </body>
 
