--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
         <lan-button type="warning" disabled>Warning</lan-button>
         <lan-button type="danger" disabled>Danger</lan-button>
     </div>
+    <div>
+      <lan-button class="btn btn-primary btn-lg">Bootstrap Button</lan-button>
+    </div>
   
   <script>
     function resetOnclick(){
