--- a/test/index.html
+++ b/test/index.html
@@ -7,7 +7,12 @@
 </head>
 <body>
   <script>
-    WCT.loadSuites(['lan-button-test.html', 'lan-button-test.html?dom=shadow']);
+    WCT.loadSuites([
+      'lan-button/lan-button-test.html',
+      'lan-button/lan-button-test.html?dom=shadow',
+      'lan-slider/lan-slider-test.html',
+      'lan-slider/lan-slider-test.html?dom=shadow'
+    ]);
   </script>
 </body>
 </html>
