--- a/test/lan-button/lan-button-test.html
+++ b/test/lan-button/lan-button-test.html
@@ -11,55 +11,76 @@
 <body>
   <test-fixture id="simple">
     <template>
-      <lan-button type="primary">Primary</lan-button>
+      <lan-button>Button</lan-button>
     </template>
   </test-fixture>
 
 
   <script>
     suite('<lan-button>', function () {
-      let el;
+      let myEl;
       setup(() => {
         myEl = fixture("simple");
       });
       test('type is primary', function () {
-        assert.equal(myEl.getAttribute("type"), "primary");
+        myEl.setAttribute('type', 'primary');
+        myEl.updateButtonColor();
+        assert.equal(myEl.getAttribute('type'), 'primary');
       });
-      test("inner text is Primary", function () {
-        assert.equal(myEl.shadowRoot.querySelector('button').innerText, "Primary");
+      test("inner text is Button", function () {
+        assert.equal(myEl.get().innerText, "Button");
       });
-      test('Setting class', function(){
+      test('Setting class', function() {
         myEl.setAttribute('autofocus', '');
         myEl.updateButtonValue();
-        assert.isNotNull(myEl.shadowRoot.querySelector('button').getAttribute('autofocus'));
+        assert.isNotNull(myEl.get().getAttribute('autofocus'));
       });
-      test('Testing bootstrap', function(){
+      test('Testing bootstrap', function() {
         myEl.setAttribute('class', 'btn');
         myEl.updateButtonValue();
-        assert.equal(myEl.shadowRoot.querySelector('button').getAttribute('class'), 'button default btn');
+        assert.equal(myEl.get().getAttribute('class'), 'button default btn');
       });
-      test('Testing button shape', function(){
+      test('Testing button shape', function() {
         myEl.setAttribute('round', '');
         myEl.updateButtonShape();
-        assert.equal(myEl.shadowRoot.querySelector('button').style.getPropertyValue('--border-rad'), '24px');
+        assert.equal(myEl.get().style.getPropertyValue('--border-rad'), '24px');
       });
-      test('Testing button size', function(){
+      test('Testing button size', function() {
         myEl.setAttribute('size', 'medium');
         myEl.updateButtonShape();
         assert.equal(myEl.get().style.getPropertyValue('--padding'), '10px 20px');
-        assert.equal(myEl.shadowRoot.querySelector('button').style.getPropertyValue('--txt-size'), '14px');
+        assert.equal(myEl.get().style.getPropertyValue('--txt-size'), '14px');
       });
-      test('Testing color', function(){
+      test('Testing color', function() {
         myEl.setAttribute('plain', '');
+        myEl.setAttribute('type', 'warning');
         myEl.updateButtonColor();
+        assert.equal(myEl.get().style.getPropertyValue('--bg-color'), '#fcf6ed');
+        assert.equal(myEl.get().style.getPropertyValue('--txt-color'), '#e6a23c');
+        assert.equal(myEl.get().style.getPropertyValue('--border-color'), '#e6a23c');
+        assert.equal(myEl.get().style.getPropertyValue('--hover-bg'), '#e6a23c');
+        assert.equal(myEl.get().style.getPropertyValue('--hover-txt'), '#ffffff');
+        assert.equal(myEl.get().style.getPropertyValue('--hover-border'), '#e6a23c');
       });
-      test('Testing diabled', function(){
+      test('Testing disabled', function() {
         myEl.setAttribute('disabled', '');
         myEl.updateDisabled();
-      })
-      test('Testing random type', function(){
+        assert.equal(myEl.get().style.getPropertyValue('--pointer-events'), 'none');
+        assert.equal(myEl.get().style.getPropertyValue('--opacity'), '.7');
+        assert.isNotNull(myEl.get().getAttribute('disabled'));
+      });
+      test('Testing random type', function() {
         myEl.setAttribute('type', 'awefoiawjefiojoaweif');
         myEl.updateButtonColor();
+        assert.equal(myEl.get().style.getPropertyValue('--bg-color'), '#ffffff');
+        assert.equal(myEl.get().style.getPropertyValue('--txt-color'), '#606266');
+        assert.equal(myEl.get().style.getPropertyValue('--border-color'), '#dcdfe6');
+        assert.equal(myEl.get().style.getPropertyValue('--hover-bg'), '#EEF5FE');
+        assert.equal(myEl.get().style.getPropertyValue('--hover-txt'), '#409eff');
+        assert.equal(myEl.get().style.getPropertyValue('--hover-border'), '#ddecfd');
+      });
+      test('Testing get function', function() {
+        assert.equal(myEl.get(), myEl.shadowRoot.querySelector('button'));
       })
     });
   </script>
