few slider unit tests and fixed test/index.html

--- a/test/index.html
+++ b/test/index.html
@@ -8,10 +8,10 @@
 <body>
   <script>
     WCT.loadSuites([
-      'lan-button/lan-button-test.html',
-      'lan-button/lan-button-test.html?dom=shadow',
-      'lan-slider/lan-slider-test.html',
-      'lan-slider/lan-slider-test.html?dom=shadow'
+      'lan-button-test.html',
+      'lan-button-test.html?dom=shadow',
+      'lan-slider-test.html',
+      'lan-slider-test.html?dom=shadow'
     ]);
   </script>
 </body>
