--- a/test/lan-slider-test.html
+++ b/test/lan-slider-test.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="utf-8">
-  <script src="../../node_modules/@webcomponents/webcomponentsjs/webcomponents-lite.js"></script>
-  <script src="../../node_modules/web-component-tester/browser.js"></script>
-  <script src="../../packages/lan-slider/src/main.js" type="module" defer></script>
+  <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-lite.js"></script>
+  <script src="../node_modules/web-component-tester/browser.js"></script>
+  <script src="../packages/lan-slider/src/main.js" type="module" defer></script>
 </head>
 
 <body>
