another attempt in unit test fixes

--- a/test/lan-slider-test.html
+++ b/test/lan-slider-test.html
@@ -19,7 +19,7 @@
   <script>
     suite('<lan-slider>', function () {
       let myEl;
-      setup(() => {
+      beforeEach(() => {
         myEl = fixture("slider");
       });
       test('Testing default value of val, min, max', function () {
