Styling Separated, used template

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
   </script>
 
   <script type = "module" src="packages/lan-slider/src/main.js"></script>
+  <script type = "module" src="packages/lan-slider/src/style.js"></script>
   <script type = "module" src="packages/lan-button/src/main.js"></script>
 </body>
 </html>
