--- a/packages/lan-slider/src/index.html
+++ b/packages/lan-slider/src/index.html
@@ -5,7 +5,7 @@
 
   <meta charset="UTF-8">
   <title>lan-slider example</title>
-  <script src="main.js" defer></script>
+  <script type="module" src="main.js" defer></script>
   <script src="../../../node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
