fix test failed on travis

--- a/test/lan-slider-test.html
+++ b/test/lan-slider-test.html
@@ -11,7 +11,7 @@
 <body>
   <test-fixture id="slider">
     <template>
-      <lan-slider></lan-slider>
+      <lan-slider onchange="null"></lan-slider>
     </template>
   </test-fixture>
 
