--- a/packages/lan-tooltip/src/index.html
+++ b/packages/lan-tooltip/src/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 
 <head>
-
     <meta charset="UTF-8">
     <title>lan-slider example</title>
     <script src="main.js" type="module" defer></script>
-    <script src="../../lan-button/src/main.js" type="module" defer></script>
+    <script src="lan-button.js" type="module" defer></script>
 </head>
 
 <body>
@@ -16,6 +15,10 @@
 
     <lan-tooltip>
         <lan-button>Button</lan-button>
+    </lan-tooltip>
+
+    <lan-tooltip visible-arrow>
+        <lan-button >Button without arrow</lan-button>
     </lan-tooltip>
 
 
