still a problem with effect = 'light'

--- a/packages/lan-tooltip/src/index.html
+++ b/packages/lan-tooltip/src/index.html
@@ -13,12 +13,12 @@
     <br><br><br>
     <lan-button>Bu</lan-button>
 
-    <lan-tooltip>
+    <lan-tooltip effect = "light">
         <lan-button>Button</lan-button>
     </lan-tooltip>
 
-    <lan-tooltip visible-arrow>
-        <lan-button >Button without arrow</lan-button>
+    <lan-tooltip visible-arrow effect = "light">
+        <lan-button>Button without arrow</lan-button>
     </lan-tooltip>
 
 
