update event attribute
change whether the tooltip shows when a button is clicked, hovered over or held down.

--- a/packages/lan-tooltip/src/index.html
+++ b/packages/lan-tooltip/src/index.html
@@ -13,12 +13,16 @@
     <br><br><br>
     <lan-button>Bu</lan-button>
 
-    <lan-tooltip effect = "light">
+    <lan-tooltip effect="dark" event="hover">
         <lan-button>Button</lan-button>
     </lan-tooltip>
 
-    <lan-tooltip visible-arrow effect = "light">
+    <lan-tooltip effect="light" event="click">
         <lan-button>Button without arrow</lan-button>
+    </lan-tooltip>
+
+    <lan-tooltip effect="dark" event="focus">
+        <lan-button type="primary">Focus</lan-button>
     </lan-tooltip>
 
 
