--- a/test/index.html
+++ b/test/index.html
@@ -1,18 +1,23 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-lite.js"></script>
   <script src="../node_modules/web-component-tester/browser.js"></script>
 </head>
+
 <body>
   <script>
     WCT.loadSuites([
       'lan-button-test.html',
       'lan-button-test.html?dom=shadow',
       'lan-slider-test.html',
-      'lan-slider-test.html?dom=shadow'
+      'lan-slider-test.html?dom=shadow',
+      'lan-tooltip-test.html',
+      'lan-tooltip-test.html?dom=shadow'
     ]);
   </script>
 </body>
+
 </html>
