--- a/packages/lan-tooltip/src/index.html
+++ b/packages/lan-tooltip/src/index.html
@@ -13,11 +13,11 @@
     <br><br><br>
     <lan-button>Bu</lan-button>
 
-    <lan-tooltip effect="dark" event="hover">
+    <lan-tooltip effect="dark" event="hover" hide-after="500" manual="false" open-delay="500">
         <lan-button>Button</lan-button>
     </lan-tooltip>
 
-    <lan-tooltip effect="light" event="click">
+    <lan-tooltip effect="light" event="click" open-delay="2000" hide-after="1000">
         <lan-button>Button without arrow</lan-button>
     </lan-tooltip>
 
