--- a/packages/lan-tooltip/src/index.html
+++ b/packages/lan-tooltip/src/index.html
@@ -17,12 +17,12 @@
         <lan-button>Button</lan-button>
     </lan-tooltip>
 
-    <lan-tooltip effect="light" event="click" open-delay="2000" hide-after="1000" visible-arrow>
+    <lan-tooltip effect="light" event="click" open-delay="2000" hide-after="1000" >
         <lan-button>Button without arrow</lan-button>
     </lan-tooltip>
 
-    <lan-tooltip effect="dark" event="focus">
-        <lan-button type="primary">Focus</lan-button>
+    <lan-tooltip effect="dark" event="click">
+        <lan-button type="primary">Focus</lan-button visible-arrow>
     </lan-tooltip>
 
 
