tooltip attributes updated

--- a/packages/lan-tooltip/src/index.html
+++ b/packages/lan-tooltip/src/index.html
@@ -5,26 +5,28 @@
     <meta charset="UTF-8">
     <title>lan-slider example</title>
     <script src="main.js" type="module" defer></script>
-    <script src="lan-button.js" type="module" defer></script>
+    <script src="../../lan-button/src/main.js" type="module" defer></script>
 </head>
 
 <body>
 
-    <br><br><br>
-    <lan-button>Bu</lan-button>
+    <br><br>
 
-    <lan-tooltip effect="dark" event="hover" hide-after="500" manual="false" open-delay="500">
+    <lan-tooltip effect="dark" event="hover" placement="right" content="Hey wassup">
         <lan-button>Button</lan-button>
     </lan-tooltip>
 
-    <lan-tooltip effect="light" event="click" open-delay="2000" hide-after="1000">
-        <lan-button>Button without arrow</lan-button>
+    <lan-tooltip effect="light" event="click" placement="top">
+        <lan-button type="danger">Button</lan-button>
     </lan-tooltip>
 
-    <lan-tooltip effect="dark" event="focus">
-        <lan-button type="primary">Focus</lan-button>
+    <lan-tooltip placement="bottom" event="focus">
+        <lan-button type="primary">Button</lan-button>
     </lan-tooltip>
 
+    <lan-tooltip placement="right" event="hover" effect="light">
+        <lan-button type="info">Button</lan-button>
+    </lan-tooltip>
 
 </body>
 
