--- a/packages/lan-tooltip/src/index.html
+++ b/packages/lan-tooltip/src/index.html
@@ -12,7 +12,7 @@
 
     <br><br>
 
-    <lan-tooltip effect="dark" event="hover" placement="right" content="Hey wassup">
+    <lan-tooltip effect="dark" event="hover" placement="right" content="Hey wassup" enterable="true">
         <lan-button>Button</lan-button>
     </lan-tooltip>
 
@@ -24,7 +24,7 @@
         <lan-button type="primary">Button</lan-button>
     </lan-tooltip>
 
-    <lan-tooltip placement="right" event="hover" effect="light">
+    <lan-tooltip placement="right" event="hover" effect="light" enterable="false">
         <lan-button type="info">Button</lan-button>
     </lan-tooltip>
 
