--- a/packages/lan-tooltip/src/index.html
+++ b/packages/lan-tooltip/src/index.html
@@ -16,7 +16,7 @@
         <lan-button>Button</lan-button>
     </lan-tooltip>
 
-    <lan-tooltip effect="light" event="click" placement="top">
+    <lan-tooltip effect="light" event="click" placement="top" offset="50">
         <lan-button type="danger">Button</lan-button>
     </lan-tooltip>
 
