try to create messagebox

--- a/index.html
+++ b/index.html
@@ -60,9 +60,15 @@
         <lan-button type="danger" disabled>Danger</lan-button>
     </div>
     <div>
-      <lan-button class="btn btn-primary btn-lg">Bootstrap Button</lan-button>
+      <lan-button class="btn btn-primary btn-lg" >Bootstrap Button</lan-button>
     </div>
-  
+    <div>
+      <lan-button type="primary" onclick="openMessageBox()">messagebox with input</lan-button>
+    </div>
+    <lan-messagebox showInput>
+        <span slot="title">Test Title</span>
+        <p slot="text"><i>Test</i> <strong>text</strong></p>
+    </lan-messagebox>
   <script>
     function resetOnclick(){
       var element = document.querySelector("lan-slider");
@@ -71,6 +77,20 @@
   </script>
 
   <script>
+    const messagebox = document.querySelector('lan-messagebox');
+    function openMessageBox(){
+      if (!messagebox.isOpen) {
+        messagebox.open();
+      }
+    }
+    messagebox.addEventListener('confirm', () => {
+      console.log('Confirmed...');
+    });
+
+    messagebox.addEventListener('cancel', () => {
+      alert('Cancelled...');
+    });
+    
     function getSliderValue() {
       var element = document.querySelector("lan-slider");
       var textArea = document.querySelector('#text-area')
@@ -81,5 +101,7 @@
   <script type = "module" src="packages/lan-slider/src/main.js"></script>
   <script type = "module" src="packages/lan-slider/src/style.js"></script>
   <script type = "module" src="packages/lan-button/src/main.js"></script>
+  <script type = "module" src="packages/lan-tooltip/src/main.js"></script>
+  <script type = "module" src="packages/lan-messagebox/main.js"></script>
 </body>
 </html>
