--- a/test/index.html
+++ b/test/index.html
@@ -15,7 +15,9 @@
       'lan-slider-test.html',
       'lan-slider-test.html?dom=shadow',
       'lan-tooltip-test.html',
-      'lan-tooltip-test.html?dom=shadow'
+      'lan-tooltip-test.html?dom=shadow',
+      'lan-card-test.html',
+      'lan-card-test.html?dom=shadow'
     ]);
   </script>
 </body>
