"add function of get input value"

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       }
     }
     messagebox.addEventListener('confirm', () => {
-      console.log('Confirmed...');
+      console.log(messagebox.getValue());
     });
 
     messagebox.addEventListener('cancel', () => {
