--- a/test/lan-card-test.html
+++ b/test/lan-card-test.html
@@ -49,7 +49,7 @@
 
         // Shadow: never
         myEl.setAttribute('shadow', 'never');
-        assert.equal((myEl.shadowRoot.querySelector("style#wrapper-style").innerHTML.match(/#card-wrapper {/g)).length, 1);
+        assert.isNull(myEl.shadowRoot.querySelector("style#wrapper-style").innerHTML.match(/box-shadow/g));
       });
       test('Testing shadow hover', function () {
         assert.isNull(myEl.shadowRoot.querySelector("#card-header"));
@@ -57,8 +57,7 @@
 
         // Shadow: hover
         myEl.setAttribute('shadow', 'hover');
-        assert.equal((myEl.shadowRoot.querySelector("style#wrapper-style").innerHTML.match(/#card-wrapper {/g)).length, 1);
-        assert.equal((myEl.shadowRoot.querySelector("style#wrapper-style").innerHTML.match(/#card-wrapper:hover {/g)).length, 1);
+        assert.equal((myEl.shadowRoot.querySelector("style#wrapper-style").innerHTML.match(/:hover {/g)).length, 1);
       });
       test('Testing shadow always', function () {
         assert.isNull(myEl.shadowRoot.querySelector("#card-header"));
