finsih a part of unit test

--- a/test/index.html
+++ b/test/index.html
@@ -17,7 +17,9 @@
       'lan-tooltip-test.html',
       'lan-tooltip-test.html?dom=shadow',
       'lan-card-test.html',
-      'lan-card-test.html?dom=shadow'
+      'lan-card-test.html?dom=shadow',
+      'lan-messagebox-test.html',
+      'lan-messagebox-test.html?dom=shadow',
     ]);
   </script>
 </body>
